# fuchsia-flutter-tetris

./: BUILD.gn  README.md  pubspec.yaml
lib/: main.dart
lib/gamer/: gamer.dart  keyboard.dart
lib/panel/: controller.dart  page_portrait.dart  player_panel.dart  screen.dart  status_panel.dart
meta/: flutter_tetris.cmx
